[블랜딩 캔버스 크기 계산]
이미지추가

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 아이디어를 광활하게 펼칠<br>
                 아름답고 부드러운 음료 공간.
             </p>
+            <canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
             <p class="canvas-caption">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem laudantium, at explicabo earum similique accusamus nisi nostrum dignissimos molestias non, autem architecto nulla dolorum et tempore doloribus dolor sint laborum eveniet? Amet optio incidunt sed laudantium, earum, voluptate esse aspernatur quod at modi nulla asperiores aperiam? Facilis, saepe perspiciatis distinctio incidunt dignissimos ullam unde quibusdam odit omnis obcaecati, mollitia aliquid commodi quasi inventore expedita. Libero ab nobis sunt. Voluptatum repellendus tempore soluta, rem deserunt excepturi inventore quae dolore aut nostrum doloribus veritatis ea. Nam doloremque praesentium soluta maiores porro animi?
             </p>
