--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
     <title>AirMug Pro</title>
 </head>
-<body>
+<body class="before-load">
+    <div class="loading">
+        <svg class="loading-circle">
+            <circle cx="50%" cy="50%" r="25"></circle>
+        </svg>
+    </div>
     <div class="container">
         <nav class="global-nav">
             <div class="global-nav-links">
