[하단 콘텐츠 추가하기]

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem laudantium, at explicabo earum similique accusamus nisi nostrum dignissimos molestias non, autem architecto nulla dolorum et tempore doloribus dolor sint laborum eveniet? Amet optio incidunt sed laudantium, earum, voluptate esse aspernatur quod at modi nulla asperiores aperiam? Facilis, saepe perspiciatis distinctio incidunt dignissimos ullam unde quibusdam odit omnis obcaecati, mollitia aliquid commodi quasi inventore expedita. Libero ab nobis sunt. Voluptatum repellendus tempore soluta, rem deserunt excepturi inventore quae dolore aut nostrum doloribus veritatis ea. Nam doloremque praesentium soluta maiores porro animi?
             </p>
         </section>
+        <section class="normal-content">
+            <p class="mid-message">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quasi eligendi, ullam voluptate obcaecati dolor ab cupiditate dolorum, libero laudantium consequatur. Magnam inventore fugiat distinctio? Illum qui perferendis maiores voluptates assumenda, neque sunt molestias consectetur quibusdam expedita amet inventore consequuntur? Possimus, ad voluptatibus perspiciatis sapiente reiciendis corrupti, sit tempore vel modi natus facilis aliquam veniam harum vitae sequi omnis praesentium suscipit officiis sunt dolore odio ullam enim dicta! Dolore, repellendus voluptatum? Voluptatem repellendus ratione officiis repellat excepturi vel quam veniam reiciendis officia sint saepe ab sapiente beatae debitis animi fugiat tempore at doloremque assumenda tempora ullam similique, commodi dicta. Accusantium.
+            </p>
+        </section>
         <footer class="footer">
             2022, 애플코딩
         </footer>
